--- a/style.css
+++ b/style.css
@@ -5,8 +5,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #d6d6d6;
 }
 
 canvas {
     box-shadow: #000 20px 10px 50px; 
+    border-radius: 5px;
+}
+
+h1 {
+    font-family: Verdana;
 }
